--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Memory Game | Marlyn Studios</title>
 </head>
 <body>
-    <script src="/index.4d6bcbeb.js" defer=""></script>
+    <script src="index.4d6bcbeb.js" defer=""></script>
     <style>html {
   background-color: #302357;
 }
